# lematerial-llm-synthesis

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  developer_guide.md  mkdocs.yml  pyproject.toml
annotations/0307fa0472a682ab559ac343038ed0cfeb8fe815/: result.json  result_human.json
annotations/0d5ffdaf23a655e1eff80bc8b6b4978067de4d5b/: result.json  result_human.json
annotations/1409.1070/: result.json  result_human.json
annotations/1602.02498/: result.json  result_human.json
annotations/1605.04038/: result.json  result_human.json
annotations/1705.03436/: result.json  result_human.json
annotations/1706.00484/: result.json  result_human.json
annotations/1709.00477/: result.json  result_human.json
annotations/1902.03049/: result.json  result_human.json
annotations/1df04f9e3f942b30d5e1c2bd1ab9cc3a79c23f13/: result.json  result_human.json
annotations/2212.12506/: result.json  result_human.json
annotations/2306.14755/: result.json  result_human.json
annotations/2404.08872/: result.json  result_human.json
annotations/2502.03121/: result.json  result_human.json
annotations/2883daff26f16a13134a26ca5d366549a14fcc9c/: result_human.json
annotations/3325ac6dfb049a5efdaad7f876c1d51b17be0158/: result.json  result_human.json
annotations/3b87159630bb0581024897961bb5fc922fc3db19/: result.json  result_human.json
annotations/60c74548469df43eacf434a6/: result.json  result_human.json
annotations/61b80eb702d90d55416229c1/: result.json  result_human.json
annotations/62b4ce6b486c987262b0ff80/: result.json  result_human.json
annotations/62cff0f127b1e42fe039c25e/: result.json  result_human.json
annotations/64b40972b605c6803bd37ab4/: result.json  result_human.json
annotations/65e0464ce9ebbb4db98ae397/: result.json  result_human.json
annotations/673b3fdd7be152b1d07c21f1/: result.json  result_human.json
annotations/73c6aeebd5877d2eb17d4961577d98216d503e6f/: result.json  result_human.json
annotations/8c37fd10addf6d79f84ec2d5f4a8e5c6d6ef676f/: result.json  result_human.json
annotations/90233593a9aa72b4bacfdeadc20050ae6d4b88e1/: result.json  result_human.json
annotations/914dfcfe8762e189e9d7873090587458e7c86695/: result.json  result_human.json
annotations/9a889c1a671fd3cae48285eaa95069d189d02fe3/: result.json  result_human.json
annotations/annotation_guide_catalysis/: dummy_double.json  dummy_single.json
annotations/c47e0cbc8b6feb8d28c3d9c1c29f98772ede6c27/: result.json  result_human.json
annotations/ccc7c5d70ae3ca3f9e975d0dc3b4d631586c1586/: result.json  result_human.json
annotations/cond-mat.0503432/: result.json  result_human.json
annotations/cond-mat.0510550/: result.json  result_human.json
annotations/cond-mat.0602418/: result.json  result_human.json
annotations/cond-mat.0603598/: result.json  result_human.json
annotations/cond-mat.0607131/: result.json  result_human.json
annotations/cond-mat.9604170/: result.json  result_human.json
annotations/f2f0828a5de4a3262edc73876809a9fe03ed6ff5/: result_human.json
config/: cli.yaml  config.yaml
config/data_loader/: annotation.yaml  default.yaml  local.yaml
config/judge/: multi_llm.yaml
config/result_save/: default.yaml  multi_llm.yaml
docs/: README.md  index.md
docs/api/: configuration.md  metrics.md  models.md  pipeline.md  transformers.md
docs/css/: custom.css
docs/developer-guide/: annotations.md  architecture.md  configuration-internals.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: cli.md  configuration.md  output-format.md  troubleshooting.md
examples/config/: config.yaml
examples/notebooks/: Fig2_Dataset_Statistics.ipynb  Fig3_Synthesis_Procedure.ipynb  catalysis_synthesis_with_performance.ipynb  keyword_search_explorer.ipynb  run_all_papers.py  run_performance_only.py  synthesis_with_performance.ipynb
examples/scripts/: catalysis-paper-extraction.py  extract_papers_70k.ipynb  test_judge_robustness.py  test_multi_llm_pipeline.py
(+215 files in other folders)
