[project]
name = "llm-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "samgleason", email = "samuel.gleason@entalpic.ai" }]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "cmcrameri>=1.9",
    "docling>=2.31.2",
    "dspy>=2.6.24",
    "einops>=0.8.2",
    "fastapi>=0.116.1",
    "fsspec>=2025.3.0",
    "gcsfs>=2025.3.0",
    "google-genai>=1.63.0",
    "hydra-core>=1.3.2",
    "jupyterlab>=4.4.2",
    "litellm>=1.83.7,<1.84",
    "matplotlib>=3.10.3",
    "mistralai>=1.7.0",
    "nltk>=3.9.4",
    "pandas>=2.2.3",
    "peft>=0.18.1",
    "pingouin>=0.5.5",
    "playwright>=1.54.0",
    "plotly>=6.2.0",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "typer>=0.15",
    "wordcloud>=1.9.4",
]

[project.scripts]
lemat-synth = "llm_synthesis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_synthesis"]

[dependency-groups]
data = ["arxiv>=2.2.0", "chemrxiv>=0.1.2"]
dev = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "nbstripout>=0.8.1",
    "ruff>=0.12.8",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.2.0",
]


# Ruff global configuration for linting & formatting
# --------------------------------------------------------
[tool.ruff]
# Target Python version
target-version = "py311"

# Line length (black formatter convention)
line-length = 80

[tool.ruff.lint]
# Ruff-specific rules (`RUF`), isort (`I`), pycodestyle (`E`), and more common rulesets
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Quote style
quote-style = "double"
# Indent style
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"*.ipynb" = ["ALL"]
